<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/artist_item">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/artist_image"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/text_info"
            android:paddingLeft="@dimen/text_full_horizontal_margin"
            android:paddingTop="@dimen/text_full_vertical_margin"
            android:id="@+id/artist_style"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/text_info"
            android:paddingLeft="@dimen/text_full_horizontal_margin"
            android:paddingTop="@dimen/text_full_vertical_margin"
            android:id="@+id/artist_progress"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/text_header"
            android:paddingLeft="@dimen/text_full_horizontal_margin"
            android:paddingTop="@dimen/text_full_vertical_margin"
            android:text="@string/biography"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/text_body"
            android:paddingLeft="@dimen/text_full_horizontal_margin"
            android:paddingTop="@dimen/text_full_vertical_margin"
            android:id="@+id/artist_about"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/text_body"
            android:paddingLeft="@dimen/text_full_horizontal_margin"
            android:paddingTop="@dimen/text_full_vertical_margin"
            android:id="@+id/artist_link"
            android:autoLink="web"
            android:visibility="gone"/>
    </LinearLayout>
</ScrollView>
